--- a/axu4j-egovframe/src/main/webapp/ui/cocker-dark-red/admin.less
+++ b/axu4j-egovframe/src/main/webapp/ui/cocker-dark-red/admin.less
@@ -141,7 +141,7 @@ a{
 
 	.ax-header{
 		z-index:300;
-		border-top:3px solid #19AA8D;
+		border-top:3px solid #e03e68;
 		height:57px;
 		position: fixed; width:100%;
 		background-image: url(images/header-skin-1.png);
@@ -223,8 +223,8 @@ a{
 							border-radius:3px;
 							text-decoration: none;white-space:nowrap;
 							color:#444;
-							&:hover{background:#eee;color:#19AA8D;}
-							&.on{background:#eee;color:#19AA8D;}
+							&:hover{background:#eee;color:#e03e68;}
+							&.on{background:#eee;color:#e03e68;}
 							&.expand{
 								background-image:url(images/rightArrows.png);background-repeat:no-repeat;background-position:100% 0px;padding-right:30px;
 								&:hover{
@@ -278,8 +278,8 @@ a{
 				}
 				&.btns{
 					a {
-						background: #1AB394;
-						border: 1px solid #1AB394;
+						background: #e03e68;
+						border: 1px solid #e03e68;
 						color:#fff;
 					}
 				}
@@ -414,7 +414,7 @@ a{
 				width:36px; height:36px;
 				.util-border-radius(36px,36px,36px,36px);
 				line-height: 36px;
-				background: #1AB394;
+				background: #e03e68;
 				color:@color-d;
 				margin-left:10px;
 				text-align: center;
@@ -433,7 +433,7 @@ a{
 			}
 		}
 		.ax-aside-box{
-			i.axi{color:#19AA8D;}
+			i.axi{color:#e03e68;}
 			.ax-box{
 				width:100%; 
 				background:@bgcolor;
@@ -441,7 +441,7 @@ a{
 				.util-border-radius(6px, 6px, 6px, 6px);
 				.util-drop-shadow (0px, 0px, 2px, 0, 0.05);
 				overflow: hidden;
-				padding-bottom:5px;
+				padding-bottom:2px;
 
 				h1{font-size:24px; color:@color-a; font-weight: normal; margin:10px 0px; padding:0px 0px;}
 				p{font-size:12px; line-height:1.6em;color:@color-a; font-weight: normal; margin:10px 0px; padding:0px;}
@@ -490,23 +490,23 @@ a{
 					border-top:@border;
 					li{
 						border-bottom:@border;
-						i.axi{
-							display: inline-block;
-							width:22px;height:22px;
-							line-height: 22px;text-align: center;
-							background: #19AA8D;
-							color:#fff;
-							border-radius: 50%;
-							margin-right:5px;
-						}
 						a{
+							i.axi{
+								display: inline-block;
+								width:22px;height:22px;
+								line-height: 22px;text-align: center;
+								background: #e03e68;
+								color:#fff;
+								border-radius: 50%;
+								margin-right:5px;
+							}
 							display: block;
 							padding:8px 10px;
 							font-size: 13px;
 							line-height: 22px;
 							&:hover, &:focus{
 								background: #EFEFEF;
-								color:#19AA8D;
+								color:#e03e68;
 							}
 						}
 					}
