--- a/axu4j-egovframe/src/main/webapp/ui/cocker/admin.less
+++ b/axu4j-egovframe/src/main/webapp/ui/cocker/admin.less
@@ -475,6 +475,8 @@ a{
 						a{
 							display: block;
 							padding:8px 10px;
+							font-size:13px;
+							line-height: 22px;
 							&:hover, &:focus{
 								background: @bgcolor-d;
 								color:@color-d;
