--- a/axu4j-egovframe/src/main/webapp/ui/cacao/admin.less
+++ b/axu4j-egovframe/src/main/webapp/ui/cacao/admin.less
@@ -479,6 +479,8 @@ a{
               a{
                 display: block;
                 padding:8px 10px;
+				  font-size:13px;
+				  line-height: 22px;
                 &:hover, &:focus{
                   background: #fff6ac;
                   color: #493334;
