--- a/axu4j-egovframe/src/main/webapp/ui/cacao-dark/admin.less
+++ b/axu4j-egovframe/src/main/webapp/ui/cacao-dark/admin.less
@@ -441,9 +441,11 @@ a{
           width:100%;
           background:@bgcolor;
           border:@border-b;  
-			padding-bottom:2px;
+			
           .util-border-radius(6px, 6px, 6px, 6px);
           .util-drop-shadow (0px, 0px, 2px, 0, 0.05);
+			overflow: hidden;
+			padding-bottom:5px;
 
           h1{font-size:24px; color:@color-a; font-weight: normal; margin:10px 0px; padding:0px 0px;}
           p{font-size:12px; line-height:1.6em;color:@color-a; font-weight: normal; margin:10px 0px; padding:0px;}
