--- a/axu4j-egovframe/src/main/webapp/ui/cacao/admin.css
+++ b/axu4j-egovframe/src/main/webapp/ui/cacao/admin.css
@@ -602,13 +602,14 @@ a:hover {
   width: 100%;
   background: #ffffff;
   border: 1px solid #e2e2e2;
-  padding-bottom: 2px;
   -webkit-border-radius: 6px 6px 6px 6px;
   -moz-border-radius: 6px 6px 6px 6px;
   border-radius: 6px 6px 6px 6px;
   -webkit-box-shadow: 0px 0px 2px 0 rgba(0, 0, 0, 0.05);
   -moz-box-shadow: 0px 0px 2px 0 rgba(0, 0, 0, 0.05);
   box-shadow: 0px 0px 2px 0 rgba(0, 0, 0, 0.05);
+  overflow: hidden;
+  padding-bottom: 5px;
 }
 #AXPage .ax-aside .ax-aside-box .ax-box h1 {
   font-size: 24px;
