--- a/axu4j-egovframe/src/main/webapp/ui/cocker/admin.css
+++ b/axu4j-egovframe/src/main/webapp/ui/cocker/admin.css
@@ -603,7 +603,8 @@ a:hover {
   -webkit-box-shadow: 0px 0px 2px 0 rgba(0, 0, 0, 0.05);
   -moz-box-shadow: 0px 0px 2px 0 rgba(0, 0, 0, 0.05);
   box-shadow: 0px 0px 2px 0 rgba(0, 0, 0, 0.05);
-  padding-bottom: 2px;
+  overflow: hidden;
+  padding-bottom: 5px;
 }
 #AXPage .ax-aside .ax-aside-box .ax-box h1 {
   font-size: 24px;
