theme 업데이트 .ax-rwd-table-mobile 추가

--- a/axu4j-egovframe/src/main/webapp/ui/cocker-dark-red/admin.css
+++ b/axu4j-egovframe/src/main/webapp/ui/cocker-dark-red/admin.css
@@ -607,7 +607,15 @@ a:hover {
   display: none;
 }
 #AXPage .ax-aside .ax-aside-box i.axi {
-  color: #e03e68;
+  display: inline-block;
+  width: 22px;
+  height: 22px;
+  line-height: 22px;
+  text-align: center;
+  background: #e03e68;
+  color: #fff;
+  border-radius: 50%;
+  margin-right: 5px;
 }
 #AXPage .ax-aside .ax-aside-box .ax-box {
   width: 100%;
@@ -691,17 +699,6 @@ a:hover {
   padding: 8px 10px;
   font-size: 13px;
   line-height: 22px;
-}
-#AXPage .ax-aside .ax-aside-box .ax-box .ax-aside-ul li a i.axi {
-  display: inline-block;
-  width: 22px;
-  height: 22px;
-  line-height: 22px;
-  text-align: center;
-  background: #e03e68;
-  color: #fff;
-  border-radius: 50%;
-  margin-right: 5px;
 }
 #AXPage .ax-aside .ax-aside-box .ax-box .ax-aside-ul li a:hover,
 #AXPage .ax-aside .ax-aside-box .ax-box .ax-aside-ul li a:focus {
@@ -1033,6 +1030,90 @@ a:hover {
   padding: 5px 0px;
 }
 .ax-rwd-table .item-group .group-clear {
+  font-size: 1px;
+  line-height: 1px;
+  height: 1px;
+  background: #e2e2e2;
+  clear: both;
+}
+.ax-rwd-table-mobile {
+  border-top: 1px solid #e2e2e2;
+  border-right: 0px none;
+}
+.ax-rwd-table-mobile .item-group {
+  position: relative;
+  min-height: 40px;
+}
+.ax-rwd-table-mobile .item-group.gray {
+  background: #eee;
+  padding: 0px;
+  min-height: 25px;
+}
+.ax-rwd-table-mobile .item-group .item {
+  float: none;
+  line-height: auto;
+  min-height: auto;
+  padding: 0px;
+  text-align: left;
+  position: relative;
+}
+.ax-rwd-table-mobile .item-group .item .item-lable {
+  position: relative;
+  display: block;
+  float: left;
+}
+.ax-rwd-table-mobile .item-group .item .item-lable span.th {
+  display: block;
+  float: none;
+  color: #616161;
+  border: none;
+  padding: 0px;
+  margin: 10px 10px 10px 15px;
+  box-sizing: content-box;
+  text-align: left;
+  font-weight: bold;
+  background: none;
+}
+.ax-rwd-table-mobile .item-group .item .item-lable span.td {
+  display: block;
+  float: none;
+  height: auto;
+  line-height: auto;
+  padding: 0px;
+  margin: 0px 10px 10px 10px;
+  *line-height: 30px;
+  box-sizing: content-box;
+  vertical-align: middle;
+  text-align: left;
+  min-width: 100px;
+}
+.ax-rwd-table-mobile .item-group .item .item-lable span.td select {
+  box-sizing: border-box;
+  height: 25px;
+  margin: 0px;
+}
+.ax-rwd-table-mobile .item-group .item .item-lable span.td input {
+  vertical-align: middle;
+}
+.ax-rwd-table-mobile .item-group .item .item-lable span.td label {
+  vertical-align: middle;
+}
+.ax-rwd-table-mobile .item-group .item.secondItem .item-lable span.th {
+  border-left: none;
+}
+.ax-rwd-table-mobile .item-group .item.rightPadding0 .item-lable span.td {
+  padding-right: 0px;
+}
+.ax-rwd-table-mobile .item-group .item.leftPadding0 .item-lable span.td {
+  padding-left: 0px;
+}
+.ax-rwd-table-mobile .item-group .item.padding0 .item-lable span.td {
+  padding: 5px 0px;
+}
+.ax-rwd-table-mobile .item-group .item-clear {
+  clear: both;
+}
+.ax-rwd-table-mobile .item-group .group-clear {
   font-size: 1px;
   line-height: 1px;
   height: 1px;
