--- a/axu4j-egovframe/src/main/webapp/ui/cacao-dark/admin.css
+++ b/axu4j-egovframe/src/main/webapp/ui/cacao-dark/admin.css
@@ -610,6 +610,17 @@ a:hover {
 #AXPage .ax-aside .ax-aside-menu-box .ax-aside-menu.on .axi-angle-double-left {
   display: none;
 }
+#AXPage .ax-aside .ax-aside-box i.axi {
+  display: inline-block;
+  width: 22px;
+  height: 22px;
+  line-height: 22px;
+  text-align: center;
+  background: #ddc800;
+  color: #3E2C42;
+  border-radius: 50%;
+  margin-right: 5px;
+}
 #AXPage .ax-aside .ax-aside-box .ax-box {
   width: 100%;
   background: #ffffff;
@@ -683,22 +694,8 @@ a:hover {
   padding: 0px;
   border-top: 1px solid #e8e8e8;
 }
-#AXPage .ax-aside .ax-aside-box .ax-box .ax-aside-ul i.axi {
-  color: #3E2C42;
-}
 #AXPage .ax-aside .ax-aside-box .ax-box .ax-aside-ul li {
   border-bottom: 1px solid #e8e8e8;
-}
-#AXPage .ax-aside .ax-aside-box .ax-box .ax-aside-ul li i.axi {
-  display: inline-block;
-  width: 22px;
-  height: 22px;
-  line-height: 22px;
-  text-align: center;
-  background: #ddc800;
-  color: #fff;
-  border-radius: 50%;
-  margin-right: 5px;
 }
 #AXPage .ax-aside .ax-aside-box .ax-box .ax-aside-ul li a {
   display: block;
@@ -1051,6 +1048,99 @@ a:hover {
   padding: 5px 0px;
 }
 .ax-rwd-table .item-group .group-clear {
+  font-size: 1px;
+  line-height: 1px;
+  height: 1px;
+  background: #e2e2e2;
+  clear: both;
+}
+.ax-rwd-table-mobile {
+  border-top: 1px solid #e2e2e2;
+  border-right: 0px none;
+}
+.ax-rwd-table-mobile .item-group {
+  position: relative;
+  min-height: 40px;
+}
+.ax-rwd-table-mobile .item-group.gray {
+  background: #eee;
+  padding: 0px;
+  min-height: 25px;
+}
+.ax-rwd-table-mobile .item-group .item {
+  float: none;
+  line-height: auto;
+  min-height: auto;
+  padding: 0px;
+  text-align: left;
+  position: relative;
+}
+.ax-rwd-table-mobile .item-group .item .item-lable,
+.ax-rwd-table-mobile .item-group .item .item-label {
+  position: relative;
+  display: block;
+  float: left;
+}
+.ax-rwd-table-mobile .item-group .item .item-lable span.th,
+.ax-rwd-table-mobile .item-group .item .item-label span.th {
+  display: block;
+  float: none;
+  color: #616161;
+  border: none;
+  padding: 0px;
+  margin: 10px 10px 10px 15px;
+  box-sizing: content-box;
+  text-align: left;
+  font-weight: bold;
+  background: none;
+}
+.ax-rwd-table-mobile .item-group .item .item-lable span.td,
+.ax-rwd-table-mobile .item-group .item .item-label span.td {
+  display: block;
+  float: none;
+  height: auto;
+  line-height: auto;
+  padding: 0px;
+  margin: 0px 10px 10px 10px;
+  *line-height: 30px;
+  box-sizing: content-box;
+  vertical-align: middle;
+  text-align: left;
+}
+.ax-rwd-table-mobile .item-group .item .item-lable span.td select,
+.ax-rwd-table-mobile .item-group .item .item-label span.td select {
+  box-sizing: border-box;
+  height: 25px;
+  margin: 0px;
+}
+.ax-rwd-table-mobile .item-group .item .item-lable span.td input,
+.ax-rwd-table-mobile .item-group .item .item-label span.td input {
+  vertical-align: middle;
+}
+.ax-rwd-table-mobile .item-group .item .item-lable span.td label,
+.ax-rwd-table-mobile .item-group .item .item-label span.td label {
+  vertical-align: middle;
+}
+.ax-rwd-table-mobile .item-group .item.secondItem .item-lable span.th,
+.ax-rwd-table-mobile .item-group .item.secondItem .item-label span.th {
+  border-left: none;
+}
+.ax-rwd-table-mobile .item-group .item.rightPadding0 .item-lable span.td,
+.ax-rwd-table-mobile .item-group .item.rightPadding0 .item-label span.td {
+  padding-right: 0px;
+}
+.ax-rwd-table-mobile .item-group .item.leftPadding0 .item-lable span.td,
+.ax-rwd-table-mobile .item-group .item.leftPadding0 .item-label span.td {
+  padding-left: 0px;
+}
+.ax-rwd-table-mobile .item-group .item.padding0 .item-lable span.td,
+.ax-rwd-table-mobile .item-group .item.padding0 .item-label span.td {
+  padding: 5px 0px;
+}
+.ax-rwd-table-mobile .item-group .item-clear {
+  clear: both;
+}
+.ax-rwd-table-mobile .item-group .group-clear {
   font-size: 1px;
   line-height: 1px;
   height: 1px;
