--- a/axu4j-egovframe/src/main/webapp/ui/cacao-dark/admin.less
+++ b/axu4j-egovframe/src/main/webapp/ui/cacao-dark/admin.less
@@ -437,6 +437,15 @@ a{
         }
       }
       .ax-aside-box{
+		  i.axi{
+			  display: inline-block;
+			  width:22px;height:22px;
+			  line-height: 22px;text-align: center;
+			  background: #ddc800;
+			  color:#3E2C42;
+			  border-radius: 50%;
+			  margin-right:5px;
+		  }
         .ax-box{
           width:100%;
           background:@bgcolor;
@@ -488,22 +497,11 @@ a{
             }
           }
           .ax-aside-ul{
-		  	i.axi{color:#3E2C42;}
             list-style: none;
             margin:0px; padding:0px;
             border-top:@border;
-
 			  li{
 				  border-bottom:@border;
-				  i.axi{
-					  display: inline-block;
-					  width:22px;height:22px;
-					  line-height: 22px;text-align: center;
-					  background: #ddc800;
-					  color:#fff;
-					  border-radius: 50%;
-					  margin-right:5px;
-				  }
 				  a{
 					  display: block;
 					  padding:8px 10px;
@@ -515,7 +513,6 @@ a{
 					  }
 				  }
 			  }
-
           }
           .ax-aside-page{
 	          display: none;
@@ -804,7 +801,87 @@ a{
 		}
 	}
 }
+.ax-rwd-table-mobile{
+	border-top: 1px solid #e2e2e2;
+	border-right: 0px none;
+	.item-group{
+		position:relative;
+		min-height:40px;
+		&.gray{
+			background: #eee;
+			padding:0px;
+			min-height:25px;
+			.searchItem{
 
+			}
+		}
+		.item{
+			float:none;
+			line-height:auto;min-height:auto;
+			padding:0px;
+			text-align:left;
+			position:relative;
+			.item-lable, .item-label{
+				position:relative;
+				display:block;float:left;
+				span.th{
+					display:block;float:none;
+					color:#616161;
+					border:none;
+					padding: 0px;
+					margin: 10px 10px 10px 15px;
+					box-sizing: content-box;
+					text-align:left;font-weight:bold;
+					background: none;
+				}
+				span.td{
+					display:block;float:none;
+					height:auto;line-height: auto;
+					padding: 0px;
+					margin: 0px 10px 10px 10px;
+					*line-height: 30px;
+					box-sizing: content-box;
+					vertical-align: middle;
+					text-align:left;
+					select{
+						box-sizing: border-box;
+						height: 25px;margin: 0px;
+					}
+					input{vertical-align: middle;}
+					label{vertical-align: middle;}
+				}
+			}
+			&.secondItem{
+				.item-lable, .item-label{
+					span.th{border-left:none};
+				}
+			}
+			&.rightPadding0{
+				.item-lable, .item-label{
+					span.td{padding-right:0px;}
+				}
+			}
+			&.leftPadding0{
+				.item-lable, .item-label{
+					span.td{padding-left:0px;}
+				}
+			}
+			&.padding0{
+				.item-lable, .item-label{
+					span.td{padding:5px 0px}
+				}
+			}
+		}
+		.item-clear{
+			clear:both;
+		}
+		.group-clear{
+			font-size:1px;line-height:1px;height:1px;
+			background:#e2e2e2;
+			clear:both;
+		}
+	}
+}
 
 // 공통 클래스 적합 대상들
 table.ax-layout{
@@ -1155,87 +1232,8 @@ table.ax-layout{
 
 @media @formMobile {
 	.ax-rwd-table{
-		border-top: 1px solid #e2e2e2;
-		border-right: 0px none;
-		.item-group{
-			position:relative;
-			min-height:40px;
-			&.gray{
-				background: #eee;
-				padding:0px;
-				min-height:25px;
-				.searchItem{
-
-				}
-			}
-			.item{
-				float:none;
-				line-height:auto;min-height:auto;
-				padding:0px;
-				text-align:left;
-				position:relative;
-				.item-lable, .item-label{
-					position:relative;
-					display:block;float:left;
-					span.th{
-						display:block;float:none;
-						color:#616161;
-						border:none;
-						padding: 0px;
-						margin: 10px 10px 10px 15px;
-						box-sizing: content-box;
-						text-align:left;font-weight:bold;
-						background: none;
-					}
-					span.td{
-						display:block;float:none;
-						height:auto;line-height: auto;
-						padding: 0px;
-						margin: 0px 10px 10px 10px;
-						*line-height: 30px;
-						box-sizing: content-box;
-						vertical-align: middle;
-						text-align:left;
-						select{
-							box-sizing: border-box;
-							height: 25px;margin: 0px;
-						}
-						input{vertical-align: middle;}
-						label{vertical-align: middle;}
-					}
-				}
-				&.secondItem{
-					.item-lable, .item-label{
-						span.th{border-left:none};
-					}
-				}
-				&.rightPadding0{
-					.item-lable, .item-label{
-						span.td{padding-right:0px;}
-					}
-				}
-				&.leftPadding0{
-					.item-lable, .item-label{
-						span.td{padding-left:0px;}
-					}
-				}
-				&.padding0{
-					.item-lable, .item-label{
-						span.td{padding:5px 0px}
-					}
-				}
-			}
-			.item-clear{
-				clear:both;
-			}
-			.group-clear{
-				font-size:1px;line-height:1px;height:1px;
-				background:#e2e2e2;
-				clear:both;
-			}
-		}
+		.ax-rwd-table-mobile();
 	}
-
 }
 
 
