--- a/axu4j-egovframe/src/main/webapp/ui/cocker-dark-red/admin.less
+++ b/axu4j-egovframe/src/main/webapp/ui/cocker-dark-red/admin.less
@@ -433,7 +433,15 @@ a{
 			}
 		}
 		.ax-aside-box{
-			i.axi{color:#e03e68;}
+			i.axi{
+				display: inline-block;
+				width:22px;height:22px;
+				line-height: 22px;text-align: center;
+				background: #e03e68;
+				color:#fff;
+				border-radius: 50%;
+				margin-right:5px;
+			}
 			.ax-box{
 				width:100%; 
 				background:@bgcolor;
@@ -491,15 +499,7 @@ a{
 					li{
 						border-bottom:@border;
 						a{
-							i.axi{
-								display: inline-block;
-								width:22px;height:22px;
-								line-height: 22px;text-align: center;
-								background: #e03e68;
-								color:#fff;
-								border-radius: 50%;
-								margin-right:5px;
-							}
+
 							display: block;
 							padding:8px 10px;
 							font-size: 13px;
@@ -809,7 +809,88 @@ a{
 		}
 	}
 }
+.ax-rwd-table-mobile{
+	border-top: 1px solid #e2e2e2;
+	border-right: 0px none;
+	.item-group{
+		position:relative;
+		min-height:40px;
+		&.gray{
+			background: #eee;
+			padding:0px;
+			min-height:25px;
+			.searchItem{
 
+			}
+		}
+		.item{
+			float:none;
+			line-height:auto;min-height:auto;
+			padding:0px;
+			text-align:left;
+			position:relative;
+			.item-lable{
+				position:relative;
+				display:block;float:left;
+				span.th{
+					display:block;float:none;
+					color:#616161;
+					border:none;
+					padding: 0px;
+					margin: 10px 10px 10px 15px;
+					box-sizing: content-box;
+					text-align:left;font-weight:bold;
+					background: none;
+				}
+				span.td{
+					display:block;float:none;
+					height:auto;line-height: auto;
+					padding: 0px;
+					margin: 0px 10px 10px 10px;
+					*line-height: 30px;
+					box-sizing: content-box;
+					vertical-align: middle;
+					text-align:left;
+					min-width: 100px;
+					select{
+						box-sizing: border-box;
+						height: 25px;margin: 0px;
+					}
+					input{vertical-align: middle;}
+					label{vertical-align: middle;}
+				}
+			}
+			&.secondItem{
+				.item-lable{
+					span.th{border-left:none};
+				}
+			}
+			&.rightPadding0{
+				.item-lable{
+					span.td{padding-right:0px;}
+				}
+			}
+			&.leftPadding0{
+				.item-lable{
+					span.td{padding-left:0px;}
+				}
+			}
+			&.padding0{
+				.item-lable{
+					span.td{padding:5px 0px}
+				}
+			}
+		}
+		.item-clear{
+			clear:both;
+		}
+		.group-clear{
+			font-size:1px;line-height:1px;height:1px;
+			background:#e2e2e2;
+			clear:both;
+		}
+	}
+}
 
 // 공통 클래스 적합 대상들
 table.ax-layout{
@@ -1160,88 +1241,8 @@ table.ax-layout{
 
 @media @formMobile {
 	.ax-rwd-table{
-		border-top: 1px solid #e2e2e2;
-		border-right: 0px none;
-		.item-group{
-			position:relative;
-			min-height:40px;
-			&.gray{
-				background: #eee;
-				padding:0px;
-				min-height:25px;
-				.searchItem{
-
-				}
-			}
-			.item{
-				float:none;
-				line-height:auto;min-height:auto;
-				padding:0px;
-				text-align:left;
-				position:relative;
-				.item-lable{
-					position:relative;
-					display:block;float:left;
-					span.th{
-						display:block;float:none;
-						color:#616161;
-						border:none;
-						padding: 0px;
-						margin: 10px 10px 10px 15px;
-						box-sizing: content-box;
-						text-align:left;font-weight:bold;
-						background: none;
-					}
-					span.td{
-						display:block;float:none;
-						height:auto;line-height: auto;
-						padding: 0px;
-						margin: 0px 10px 10px 10px;
-						*line-height: 30px;
-						box-sizing: content-box;
-						vertical-align: middle;
-						text-align:left;
-						min-width: 100px;
-						select{
-							box-sizing: border-box;
-							height: 25px;margin: 0px;
-						}
-						input{vertical-align: middle;}
-						label{vertical-align: middle;}
-					}
-				}
-				&.secondItem{
-					.item-lable{
-						span.th{border-left:none};
-					}
-				}
-				&.rightPadding0{
-					.item-lable{
-						span.td{padding-right:0px;}
-					}
-				}
-				&.leftPadding0{
-					.item-lable{
-						span.td{padding-left:0px;}
-					}
-				}
-				&.padding0{
-					.item-lable{
-						span.td{padding:5px 0px}
-					}
-				}
-			}
-			.item-clear{
-				clear:both;
-			}
-			.group-clear{
-				font-size:1px;line-height:1px;height:1px;
-				background:#e2e2e2;
-				clear:both;
-			}
-		}
+		.ax-rwd-table-mobile();
 	}
-
 }
 
 
